--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "morgan": "^1.9.1",
     "@ant-design/icons": "^4.2.2",
     "@craco/craco": "^5.7.0",
     "@testing-library/jest-dom": "^4.2.4",
